frontend/src/components/CheckoutWrapper/checkoutWrapper.scss
@use '../../scss/abstracts' as *;
@use '../../scss/layout' as *;
@use '../../scss/theme/colors' as *;

#checkout-wrapper {
	padding-top: $spacer-xs;
	position: relative;

	@include breakpoint-min(md) {
		padding: rem(40) 0px;
	}

	&.confirmation-padding {
		padding-bottom: $spacer-xs;

		@include breakpoint-min(md) {
			padding-top: $spacer-sm;
			padding-bottom: $spacer-sm;
		}
	}

	.payment-confirmation-heading {
		font-size: $body-1;
		margin-bottom: $heading-spacer-sm;
		display: flex;
		align-items: center;
		gap: $gap-sm;
		&::before {
			content: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M16.0001 29.3332C23.3639 29.3332 29.3334 23.3636 29.3334 15.9998C29.3334 8.63604 23.3639 2.6665 16.0001 2.6665C8.63628 2.6665 2.66675 8.63604 2.66675 15.9998C2.66675 23.3636 8.63628 29.3332 16.0001 29.3332ZM23.3739 12.7069C23.7644 12.3164 23.7644 11.6833 23.3739 11.2927C22.9833 10.9022 22.3502 10.9022 21.9596 11.2927L14.6667 18.5856L11.3739 15.2927C10.9833 14.9022 10.3502 14.9022 9.95964 15.2927C9.56912 15.6833 9.56912 16.3164 9.95964 16.7069L13.9596 20.7069C14.1472 20.8945 14.4015 20.9998 14.6667 20.9998C14.932 20.9998 15.1863 20.8945 15.3739 20.7069L23.3739 12.7069Z' fill='%2345B36B'/%3E%3C/svg%3E%0A");
			line-height: 0;
		}
	}

	section {
		padding: $text-spacer-sm 0px;

		& + section {
			border-top: border();
		}

		@include breakpoint-max(md) {
			&:last-of-type {
				padding-bottom: $text-spacer-sm;
			}
		}

		.section-title {
			font-size: $body-1;
			font-weight: $fw-semi-bold;
			margin-bottom: rem(20);

			// payment confirmation
			&.section-title--muted {
				font-size: $body-2;
				color: $muted;
				font-weight: $fw-medium;
			}
		}

		&:first-of-type {
			@include breakpoint-min(md) {
				padding-top: 0px;
			}
		}
	}

	.order-card {
		@extend .card-xs;

		.event-image {
			width: 64px;
			height: 64px;

			@include breakpoint-min(md) {
				width: 84px;
				height: 84px;
			}
		}

		.details {
			margin-top: rem(2);
			gap: rem(2);
			flex-grow: 1;
			min-width: 0;

			*:not(.event-name) {
				font-size: $caption;
			}
		}

		.event {
			&-name {
				font-family: $font-body;
				font-size: rem(18);
				margin-bottom: 0px;
			}
		}

		.tickets {
			color: $muted;
		}
	}
}

